--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 			<button type="submit">Enviar form</button>
 		</form>
-
+		<div id="creedValidateText"></div>
 </body>
 <!-- Latest compiled and minified CSS & JS -->
 
